# hermes-doc365-web

./: .gitignore  CLAUDE.md  README.md  doc365-hermes-portal-mvp-prd.md  hermes-portal-integration-guide.md
.github/workflows/: ci.yml
adapter/: Dockerfile  Dockerfile.dev  README.md  pyproject.toml
adapter/src/adapter/: __init__.py  actions.py  config.py  envelope.py  events.py  files.py  hermes_runner.py  main.py  persona.py  signing.py
adapter/tests/: test_actions.py  test_events.py  test_files_limits.py  test_hermes_runner.py  test_signing.py
infra/: .env.example  Caddyfile  docker-compose.dev.yml  docker-compose.yml  seed.sql
scripts/: bootstrap.sh  seed-user.ts  smoke.ts  update.sh
web/: .dockerignore  Dockerfile  Dockerfile.dev  drizzle.config.ts  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
web/src/: middleware.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/(app)/: layout.tsx
web/src/app/(app)/conversations/: page.tsx
web/src/app/(auth)/login/: login-form.tsx  page.tsx
web/src/app/admin/: layout.tsx  page.tsx
web/src/app/api/conversations/: route.ts
web/src/app/api/health/: route.ts
web/src/components/: approval-modal.tsx  file-dropzone.tsx  quick-actions.tsx
web/src/components/ui/: button.tsx  dialog.tsx  input.tsx  label.tsx  tooltip.tsx
web/src/db/: index.ts  migrate.ts  schema.ts
web/src/db/migrations/: 0000_init.sql
web/src/lib/: adapter-client.ts  auth-handlers.ts  auth.config.ts  auth.ts  env.ts  hermes-envelope.ts  repos.ts  storage.ts  utils.ts
web/src/lib/i18n/: pt-BR.ts
(+11 files in other folders)
