[project]
name = "doc365-hermes-adapter"
version = "0.1.0"
description = "FastAPI wrapper around the Hermes Agent for the Doc365 portal."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Doc365" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "boto3>=1.35.0",
    "python-multipart>=0.0.12",
    "sse-starlette>=2.1.3",
    # hermes-agent pulled from PyPI. Install with the `web` extra for FastAPI/uvicorn
    # alignment — these are already top-level deps, but the extra keeps versioning sane.
    # Pinned loose until we validate; replace with a specific version once tested.
    "hermes-agent[web]>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adapter"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
